--- a/SE/MainFiles_SE/SOE/index.html
+++ b/SE/MainFiles_SE/SOE/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300&display=swap" rel="stylesheet">
   </head>
 
-  <body style="background-image: url('images/pic3.jpg');">
+  <body style="background-image: url('images/banner.png');">
     <center>
     <div class="heading">
       <h1>Temperature Monitoring System</h1>
