--- a/SE/MainFiles_SE/SOE/home.html
+++ b/SE/MainFiles_SE/SOE/home.html
@@ -29,6 +29,7 @@
           <li><a href="#overview">ABOUT US</a></li>
           <li><a href="#building-section">BUILDING PARTNERS</a></li>
           <li><a href="#services">SERVICES</a></li>
+          <li><a href="#team">TEAM</a></li>
         </ul>
       </div>
     </nav>
@@ -87,7 +88,7 @@
 
 
 <!-- Services-->
-<section class="page-section" id="services">
+<section class="page-section" id="services" style="padding: 0%;">
     <div class="container">
         <div class="text-center">
             <h1 class="section-heading build-head-2 text-uppercase">Services</h1>
@@ -123,9 +124,53 @@
     </div>
 </section>
 <br>
-<br><br><br>
+<br><br>
 
-
+<section class="page-section bg-light" id="team">
+  <div class="container">
+      <div class="text-center">
+        <h1 class="section-heading build-head-2 text-uppercase">Our Amazing Team</h1>
+      </div>
+      <div class="row">
+          <div class="col-lg-3">
+              <div class="team-member">
+                  <img class="mx-auto rounded-circle" src="assets/img/team/4.jpeg" alt="..." />
+                  <h4><b>Ishneet Sethi</b></h4>
+                  <p class="text-muted">Work---</p>
+                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/ishneet890"><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/ishneet-sethi-a9b4961a4/"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+          </div>
+          <div class="col-lg-3">
+              <div class="team-member">
+                  <img class="mx-auto rounded-circle" src="assets/img/team/3.jpeg" alt="..." />
+                  <h4><b>Nidhi Kamewar</b></h4>
+                  <p class="text-muted">Work---</p>
+                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-linkedin-in"></i></a>
+              </div>
+          </div>
+          <div class="col-lg-3">
+              <div class="team-member">
+                  <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                  <h4><b>Mukul</b></h4>
+                  <p class="text-muted">Work---</p>
+                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-linkedin-in"></i></a>
+              </div>
+          </div>
+          <div class="col-lg-3">
+              <div class="team-member">
+                  <img class="mx-auto rounded-circle" src="assets/img/team/1.jpeg" alt="..." />
+                  <h4><b>Kishan</b></h4>
+                  <p class="text-muted">Work---</p>
+                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/i"><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href=><i class="fab fa-linkedin-in"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 <!-- Footer section -->
 <section class="footer">
    <h4>Temperature Monitoring System</h4>
