Added linkedin github links

--- a/SE/MainFiles_SE/SOE/home.html
+++ b/SE/MainFiles_SE/SOE/home.html
@@ -84,7 +84,7 @@
       </div>
     </div>
   </div>
-</section>
+</section><br><br>
 
 
 <!-- Services-->
@@ -146,8 +146,8 @@
                   <img class="mx-auto rounded-circle" src="assets/img/team/3.jpeg" alt="..." />
                   <h4><b>Nidhi Kamewar</b></h4>
                   <p class="text-muted">Work---</p>
-                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-github"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/nidhikamewar15"><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/nidhi-kamewar-a94999197/"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
           <div class="col-lg-3">
