--- a/SE/MainFiles_SE/SOE/home.html
+++ b/SE/MainFiles_SE/SOE/home.html
@@ -155,8 +155,8 @@
                   <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                   <h4><b>Mukul</b></h4>
                   <p class="text-muted">Work---</p>
-                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-github"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/Mu-C00L"><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/mukul-mohmare/"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
           <div class="col-lg-3">
@@ -165,7 +165,7 @@
                   <h4><b>Kishan</b></h4>
                   <p class="text-muted">Work---</p>
                   <a class="btn btn-dark btn-social mx-2" href="https://github.com/i"><i class="fab fa-github"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href=><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kishan-tripathi-5b667018b/"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
       </div>
