--- a/SE/MainFiles_SE/SOE/home.html
+++ b/SE/MainFiles_SE/SOE/home.html
@@ -161,10 +161,10 @@
           </div>
           <div class="col-lg-3">
               <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="assets/img/team/1.jpeg" alt="..." />
+                  <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                   <h4><b>Kishan</b></h4>
                   <p class="text-muted">Work---</p>
-                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/i"><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/GhostFoxSledgehammer"><i class="fab fa-github"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kishan-tripathi-5b667018b/"><i class="fab fa-linkedin-in"></i></a>
               </div>
           </div>
