--- a/SE/MainFiles_SE/SOE/home.html
+++ b/SE/MainFiles_SE/SOE/home.html
@@ -152,7 +152,7 @@
           </div>
           <div class="col-lg-3">
               <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+                  <img class="mx-auto rounded-circle" src="assets/img/team/2.jpeg" alt="..." />
                   <h4><b>Mukul</b></h4>
                   <p class="text-muted">Work---</p>
                   <a class="btn btn-dark btn-social mx-2" href="https://github.com/Mu-C00L"><i class="fab fa-github"></i></a>
