--- a/SE/MainFiles_SE/SOE/home.html
+++ b/SE/MainFiles_SE/SOE/home.html
@@ -136,7 +136,7 @@
               <div class="team-member">
                   <img class="mx-auto rounded-circle" src="assets/img/team/4.jpeg" alt="..." />
                   <h4><b>Ishneet Sethi</b></h4>
-                  <p class="text-muted">Work---</p>
+                  <p class="text-muted"> Designing the UI of the web app(Front-End) and Making of Graphs for better clarity applying the optimized algorithm. </p>
                   <a class="btn btn-dark btn-social mx-2" href="https://github.com/ishneet890"><i class="fab fa-github"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/ishneet-sethi-a9b4961a4/"><i class="fab fa-linkedin-in"></i></a>
               </div>
@@ -145,7 +145,7 @@
               <div class="team-member">
                   <img class="mx-auto rounded-circle" src="assets/img/team/3.jpeg" alt="..." />
                   <h4><b>Nidhi Kamewar</b></h4>
-                  <p class="text-muted">Work---</p>
+                  <p class="text-muted">Back-End Node Server for Web Application connecting the front-end and back-end setting up the mailing system for temperature rise/fall. </p>
                   <a class="btn btn-dark btn-social mx-2" href="https://github.com/nidhikamewar15"><i class="fab fa-github"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/nidhi-kamewar-a94999197/"><i class="fab fa-linkedin-in"></i></a>
               </div>
@@ -154,7 +154,7 @@
               <div class="team-member">
                   <img class="mx-auto rounded-circle" src="assets/img/team/2.jpeg" alt="..." />
                   <h4><b>Mukul</b></h4>
-                  <p class="text-muted">Work---</p>
+                  <p class="text-muted">Choosing the Tech-Stack Preparing documents SRS SDS User Manual.</p>
                   <a class="btn btn-dark btn-social mx-2" href="https://github.com/Mu-C00L"><i class="fab fa-github"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/mukul-mohmare/"><i class="fab fa-linkedin-in"></i></a>
               </div>
@@ -163,7 +163,7 @@
               <div class="team-member">
                   <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                   <h4><b>Kishan</b></h4>
-                  <p class="text-muted">Work---</p>
+                  <p class="text-muted">Preparing the documents Tracib</p>
                   <a class="btn btn-dark btn-social mx-2" href="https://github.com/GhostFoxSledgehammer"><i class="fab fa-github"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kishan-tripathi-5b667018b/"><i class="fab fa-linkedin-in"></i></a>
               </div>
